# Job-Board-Application

./: README.md  db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py
jobs/: admin.py  models.py
jobs/migrations/: 0001_initial.py
templates/accounts/: register.html
